--- a/PlanTechShenApp/Community/SettingsPage.xaml
+++ b/PlanTechShenApp/Community/SettingsPage.xaml
@@ -4,9 +4,10 @@
              x:Class="PlanTechShenApp.Community.SettingsPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Text="Settings"
+                   TextColor="Black"
+                   FontSize="30"
+                   FontAttributes="Bold"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
