--- a/PlanTechShenApp/Views/PlantNamePage.xaml
+++ b/PlanTechShenApp/Views/PlantNamePage.xaml
@@ -4,12 +4,19 @@
              x:Class="PlanTechShenApp.Views.PlantNamePage"
              Title="{Binding Name}">
     
+    
     <StackLayout Margin="20"
                  VerticalOptions="StartAndExpand">
+        
+        <Label Text="Date"
+               TextColor="Black"
+                FontAttributes="Bold"
+               FontSize="15"/>
+        <DatePicker x:Name="startDatePicker"
+                    Margin="30, 0, 0, 30"
+                    DateSelected="startDatePicker_DateSelected" />
         <Label Text="Name" />
         <Entry Text="{Binding Name}" />
-        <Label Text="Notes" />
-        <Entry Text="{Binding Notes}" />
         <Label Text="Done" />
         <Switch IsToggled="{Binding Done}" />
         <Button Text="Save"
