--- a/PlanTechShenApp/Views/PlantListPage.xaml
+++ b/PlanTechShenApp/Views/PlantListPage.xaml
@@ -1,23 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlanTechShenApp.Views.PlantListPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:forms="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
+            x:Class="PlanTechShenApp.Views.PlantListPage" Title="Plant name">
 
-    <ContentPage Title="Plant name">
-        
-        <ContentPage.ToolbarItems>
-            <ToolbarItem Text="+" Clicked="OnItemAddClicked">
-                <ToolbarItem.IconImageSource>
-                    <OnPlatform x:TypeArguments="ImageSource">
-                        <On Platform="Android, UWP"
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="+" Clicked="OnItemAddClicked">
+            <ToolbarItem.IconImageSource>
+                <OnPlatform x:TypeArguments="ImageSource">
+                    <On Platform="Android, UWP"
                         Value="plus.png" />
-                    </OnPlatform>
-                </ToolbarItem.IconImageSource>
-            </ToolbarItem>
-        </ContentPage.ToolbarItems>
-        
-        
-    <ListView x:Name="listView"
+                </OnPlatform>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
+    </ContentPage.ToolbarItems>
+
+    <StackLayout>     
+
+        <forms:ChartView x:Name="chartView"
+                         Grid.Row="2"
+                         BackgroundColor="White"
+                        HeightRequest="250"/>
+
+      <ListView x:Name="listView"
               Margin="20"
               ItemSelected="OnlistViewItemSelected">
         
@@ -39,6 +43,6 @@
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
-        
-    </ContentPage>
-</TabbedPage>
+      
+        </StackLayout>
+</ContentPage>
